# trading

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.aws.yml  pyproject.toml  sitecustomize.py
bots/cex_swing/: config.example.json
bots/moomoo_paper_bot/: config.example.json
bots/template_bot/: README.md  config.example.json
deploy/alertmanager/: alertmanager.yml
deploy/cloud-init/: ec2-bootstrap.yaml
deploy/prometheus/: alert_rules.yml  prometheus.yml
deploy/systemd/: trading-bot.service  trading-stack.service
docs/: architecture.md  aws-ec2-deploy.md  aws-secrets-manager.md  discord-alerting.md  review-next-plan.md
scripts/: deploy_ec2.sh  deploy_stack_ec2.sh
src/trading_bot/: __init__.py  __main__.py  cli.py
src/trading_bot/alerting/: discord_relay.py
src/trading_bot/bots/: __init__.py  base.py  paper_cex_swing.py
src/trading_bot/core/: __init__.py  config.py  logging.py  metrics.py  recorder.py  risk.py  runtime.py  secrets.py
src/trading_bot/execution/: __init__.py  base.py  bitflyer.py  dry_run.py  factory.py  moomoo.py  paper.py
src/trading_bot/market_data/: __init__.py  base.py  bitflyer.py  factory.py  moomoo.py  synthetic.py
src/trading_bot/research/: __init__.py  summary.py
src/trading_bot/strategy/: base.py  factory.py  momentum.py  passthrough.py
tests/: test_bitflyer_execution.py  test_bitflyer_market_data.py  test_config.py  test_discord_relay.py  test_graceful_shutdown.py  test_paper_bot.py  test_recorder.py  test_risk.py  test_secrets.py  test_strategy.py  test_summary.py
