[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Core foundation for crypto trading bots and research workflows"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Toshiki Kobayashi" }
]
dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.34"]
dev = []

[project.scripts]
trading-bot = "trading_bot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
